ipc/ipdl/test/ipdl/error/intrMessageCompress.ipdl
//error: message `foo' in protocol `intrMessageCompress' requests compression but is not async
//error: message `bar' in protocol `intrMessageCompress' requests compression but is not async

[ChildProc=any]
intr protocol intrMessageCompress {
parent:
    [Compress, LegacyIntr] intr foo();
child:
    [Compress, LegacyIntr] intr bar();
};
